# openfoam-agentbench-minilab

./: .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml  pages.yml
backend/: pyproject.toml
backend/ofab/: __init__.py  api.py  cli.py  config.py  models.py  paths.py  physics.py  physics_couette.py  physics_pipe.py
backend/ofab/benchmark/: __init__.py  contracts.py  diagnosis.py  metrics.py  qoi.py  reward.py  scorecard.py
backend/ofab/demo/: __init__.py  couette_case.py  couette_evidence.py  pipe_case.py  pipe_evidence.py  real_evidence.py  replay_data.py  seed_experiment.py
backend/ofab/memory/: __init__.py  case_miner.py  store.py
backend/ofab/runner/: __init__.py  mock_runner.py  openfoam_couette.py  openfoam_pipe.py  openfoam_runner.py  replay_runner.py
backend/tests/: test_cli_api.py  test_contracts.py  test_diagnosis.py  test_experiment.py  test_generalization.py  test_memory.py  test_models.py  test_openfoam_couette.py  test_openfoam_pipe.py  test_physics.py  test_physics_couette.py  test_physics_pipe.py  test_replay_bundle.py  test_reward.py  test_runners.py  test_scorecard.py
benchmarks/contracts/: channel_poiseuille.yaml  couette_shear.yaml  pipe_poiseuille.yaml
benchmarks/failure_injections/: bc_mismatch.yaml  coarse_mesh.yaml  solver_setting_error.yaml
data/: demo_bundle.json  real_evidence_couette.json  real_evidence_pipe.json
docs/: demo_storyboard.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  (+3 more)
(+33 files in other folders)
