[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ofab"
version = "0.1.0"
description = "OpenFOAM-AgentBench MiniLab — Benchmark-Feedback CFD agent loop (backend + CLI + API)"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
ofab = "ofab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ofab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # third-party only: starlette's TestClient warns about httpx; not our code
    "ignore:Using .httpx. with .starlette.testclient",
]
